# daily_learning

./: README.md
书籍论文/: README.md
学习笔记/: A Survey of Motion Planning and Control techniques for Self-Driving Urban Vehicles学习笔记.md  C++编译学习笔记.md  CAN学习笔记.md  LQR控制学习笔记.md  Pytorch学习笔记.md  ROS学习笔记.md  Vehicle Dynamics and Control学习笔记.md  VehicleDynamicsandControl学习笔记.md  ubuntu基本命令学习笔记.md  基于几何的车辆横向控制学习笔记.md  模型预测控制（MPC）学习笔记.md  纯跟踪算法(Pure Pursuit)学习笔记.md  纯跟踪算法学习笔记.md  车辆横向动力学模型学习笔记.md
学习笔记/autoware/: Autoware仿真环境搭建.md  PCL点云库.md  RTK.md  Runtime Manager.md  op_planner.md  rviz.md  官方demo运行.md  定位模块.md  建图模块.md  感知模块.md  控制模块.md  规划模块.md
学习笔记/imgs/: 1  70  SouthEast1  watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAMC0-b28=,size_20,color_FFFFFF,t_70,g_se,x_16
学习笔记/仿真/: 使用Astar路径规划仿真.md  在Autoware中使用openPlanner进行路径规划.md  在Autoware中使用带GPS的仿真模型.md
学习笔记/其它/: CAN通信测试.md  Jet和Git教育认证.md  arm架构银河麒麟系统行为树依赖库安装.md  docker.md  foxglove.md  ubuntu录屏.md  易咖清扫车CAN控制报文信号解析.md  行为树可视化Groot安装.md
学习笔记/基础/: C++编译学习笔记.md  CAN学习笔记.md  Git学习笔记.md  (+6 more)
学习笔记/车辆规划/运动规划/frenet2cartesian/: CMakeLists.txt  readme.md
学习笔记/车辆规划/运动规划/frenet2cartesian/docs/: absl库安装.md
学习笔记/车辆规划/运动规划/frenet2cartesian/include/common/: binary.h  cartesian_frenet_conversion.h  log.h  math_utils.h  vec2d.h
学习笔记/车辆规划/运动规划/frenet2cartesian/lib/: binary.cpp  cartesian_frenet_conversion.cpp  math_utils.cpp  vec2d.cpp
学习笔记/车辆规划/运动规划/frenet2cartesian/src/: cartesian_frenet_conversion_test.cpp
规划部分代码解析/: mpc.md  op_common_params.md  op_planner.md  pure_pursuit.md  数据流.md  规划控制数据流.md  规划数据流.md
(+291 files in other folders)
